# janety

./: .gitignore  .prettierignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml  prettier.config.mjs  turbo.json
apps/native/: package.json
apps/native/src-tauri/: Cargo.toml  tauri.conf.json
apps/native/src-tauri/src/: commands.rs  lib.rs
apps/tauri/: eslint.config.js  package.json  svelte.config.js  tsconfig.json  vite.config.ts
apps/tauri/src-tauri/: Cargo.toml  rust-toolchain.toml  tauri.conf.json
apps/tauri/src-tauri/src/: commands.rs  lib.rs
apps/tauri/src/lib/: compiler.ts
apps/tauri/src/routes/: +layout.svelte  +page.svelte  layout.css
apps/web/: README.md  eslint.config.js  package.json  svelte.config.js  tsconfig.json  vite.config.ts
apps/web/src/lib/: compiler.ts
apps/web/src/lib/adapters/: compiler.tauri.ts  compiler.ts  compiler.web.ts
apps/web/src/lib/features/editor/: Editor.svelte  index.ts
apps/web/src/routes/: +layout.svelte  +page.svelte  layout.css
crates/janety-core/: Cargo.toml  build.rs  devenv.nix
crates/janety-core/janet_c/: janet_wasm.c  wrapper.c
crates/janety-core/src/: ast.rs  lib.rs  main.rs  parser.rs  result.rs  test_extension.rs  transpiler.rs  vm.rs  wasm.rs
crates/janety-core/src/semantics/: env.rs  mod.rs  typeck.rs
crates/janety-core/train/janet/: generation.janet  lexer.janet  parser.janet  res.janet  synthax.janet  tests.janet  train.janet  type-lexer.janet  typer.janet  types.g
