[package]
name = "janety-core"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["wasm"]
wasm = [ "wasm-bindgen" ]

[dependencies]
anyhow = "1.0.102"
ariadne = "0.6.0"
chumsky = "0.13.0"
getrandom = { version = "0.4.3", features = ["wasm_js"] }
logos = "0.16.1"
serde = { version = "1.0.228", features = ["derive"] }
wasm-bindgen = { version = "0.2.123", optional = true }

[build-dependencies]
cc = "1.2.65"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false